--- a/src/main/resources/fxml/menu.fxml
+++ b/src/main/resources/fxml/menu.fxml
@@ -13,7 +13,7 @@
         <VBox spacing="20" alignment="CENTER">
             <Button id="newGameButton" text="NEW GAME" onAction="#newGame"/>
             <Button id="joinToGameButton" text="JOIN TO GAME" onAction="#joinToGame"/>
-            <Button id="exitButton" text="EXIT" fx:id="exitButton" onAction="#exit"/>
+            <Button id="exitButton" text="EXIT" fx:id="exitButton" onAction="#exitAction"/>
         </VBox>
     </center>
 
