--- a/src/main/resources/fxml/join.fxml
+++ b/src/main/resources/fxml/join.fxml
@@ -3,13 +3,17 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import java.net.URL?>
 <VBox alignment="CENTER" xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="client.controller.JoinController"
-            prefHeight="275.0" prefWidth="300.0" spacing="20">
+      xmlns:fx="http://javafx.com/fxml"
+      fx:controller="client.controller.JoinController"
+      prefHeight="275.0" prefWidth="300.0" spacing="20">
 
     <ComboBox fx:id="boardSideBox" promptText="Board Side"/>
     <ComboBox fx:id="colorBox" promptText="Color"/>
     <Button text="JOIN" onAction="#joinToBoard" />
 
+    <stylesheets>
+        <URL value="@../css/joinStyle.css"/>
+    </stylesheets>
 </VBox>
