--- a/src/main/resources/fxml/menu.fxml
+++ b/src/main/resources/fxml/menu.fxml
@@ -3,19 +3,21 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import java.net.URL?>
 <BorderPane prefHeight="275" prefWidth="300" fx:controller="client.controller.MenuController" xmlns:fx="http://javafx.com/fxml" >
-
-    <top>
-        <Label id="head" alignment="CENTER" text="WELCOME IN TRYLMA THE GAME!" />
-    </top>
 
     <center>
         <VBox spacing="20" alignment="CENTER">
+            <Label id="head" alignment="CENTER" text="WELCOME IN TRYLMA THE GAME!" />
             <Button id="newGameButton" text="NEW GAME" onAction="#newGame"/>
             <Button id="joinToGameButton" text="JOIN TO GAME" onAction="#joinToGame"/>
             <Button id="exitButton" text="EXIT" fx:id="exitButton" onAction="#exitAction"/>
         </VBox>
     </center>
+
+    <stylesheets>
+        <URL value="@../css/menuStyle.css"/>
+    </stylesheets>
 
 
 </BorderPane>
