--- a/src/main/resources/fxml/board.fxml
+++ b/src/main/resources/fxml/board.fxml
@@ -15,12 +15,12 @@
         <Button fx:id="exitButton" onAction="#exitAction" text="EXIT"/>
         <Button onAction="#endTurn" text="END TURN"/>
         <Separator orientation="VERTICAL" prefHeight="200.0"/>
-        <Label fx:id="label0" prefHeight="19.0" prefWidth="80.0" text="Empty 0"/>
-        <Label fx:id="label1" prefHeight="19.0" prefWidth="80.0" text="Empty 1"/>
-        <Label fx:id="label2" prefHeight="19.0" prefWidth="80.0" text="Empty 2"/>
-        <Label fx:id="label3" prefHeight="19.0" prefWidth="80.0" text="Empty 3"/>
-        <Label fx:id="label4" prefHeight="19.0" prefWidth="80.0" text="Empty 4"/>
-        <Label fx:id="label5" prefHeight="19.0" prefWidth="80.0" text="Empty 5"/>
+        <Label fx:id="label0" prefHeight="19.0" prefWidth="80.0" />
+        <Label fx:id="label1" prefHeight="19.0" prefWidth="80.0" />
+        <Label fx:id="label2" prefHeight="19.0" prefWidth="80.0" />
+        <Label fx:id="label3" prefHeight="19.0" prefWidth="80.0" />
+        <Label fx:id="label4" prefHeight="19.0" prefWidth="80.0" />
+        <Label fx:id="label5" prefHeight="19.0" prefWidth="80.0" />
 
     </HBox>
     <Separator/>
