--- a/src/main/resources/fxml/board.fxml
+++ b/src/main/resources/fxml/board.fxml
@@ -7,23 +7,21 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox alignment="CENTER" prefHeight="670.0" prefWidth="920.0" xmlns="http://javafx.com/javafx/8.0.172-ea"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.BoardController">
+<VBox alignment="CENTER" prefHeight="670.0" prefWidth="920.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.BoardController">
     <HBox alignment="CENTER" prefHeight="70.0" prefWidth="920.0" spacing="20.0">
         <Button fx:id="startButton" onAction="#startAction" text="START" />
-        <Button fx:id="exitButton" onAction="#exitAction" text="EXIT"/>
-        <Button onAction="#endTurn" text="END TURN"/>
-        <Separator orientation="VERTICAL" prefHeight="200.0"/>
-        <Label fx:id="label0" prefHeight="19.0" prefWidth="80.0" />
-        <Label fx:id="label1" prefHeight="19.0" prefWidth="80.0" />
-        <Label fx:id="label2" prefHeight="19.0" prefWidth="80.0" />
-        <Label fx:id="label3" prefHeight="19.0" prefWidth="80.0" />
-        <Label fx:id="label4" prefHeight="19.0" prefWidth="80.0" />
-        <Label fx:id="label5" prefHeight="19.0" prefWidth="80.0" />
+        <Button fx:id="exitButton" onAction="#exitAction" text="EXIT" />
+        <Button onAction="#endTurn" text="END TURN" />
+        <Separator orientation="VERTICAL" prefHeight="200.0" />
+        <Label fx:id="label0" prefHeight="19.0" prefWidth="70.0" />
+        <Label fx:id="label1" prefHeight="19.0" prefWidth="70.0" />
+        <Label fx:id="label2" prefHeight="19.0" prefWidth="70.0" />
+        <Label fx:id="label3" prefHeight="19.0" prefWidth="70.0" />
+        <Label fx:id="label4" prefHeight="19.0" prefWidth="70.0" />
+        <Label fx:id="label5" prefHeight="19.0" prefWidth="70.0" />
+        <Label fx:id="gameId" prefHeight="19.0" prefWidth="90.0" />
 
     </HBox>
-    <Separator/>
-    <Pane fx:id="pane" prefHeight="600.0" prefWidth="920.0"/>
+    <Separator />
+    <Pane fx:id="pane" prefHeight="600.0" prefWidth="920.0" />
 </VBox>
-
